# computer_vision

./: find_colored_objects.py  forms.py  main.py  pyproject.toml
